config github workflow

--- a/.github/workflows/master_eventhubapiserver.yml
+++ b/.github/workflows/master_eventhubapiserver.yml
@@ -25,7 +25,7 @@ jobs:
         run: dotnet build EventHub.sln --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish EventHub.Presentation/EventHub.Presentation.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish EventHub.Presentation/EventHub.Presentation.csproj -c Release -o "${{env.DOTNET_ROOT}}/myapp"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
