add cached repository using decorator pattern

--- a/src/EventHub.Application/EventHub.Application.csproj
+++ b/src/EventHub.Application/EventHub.Application.csproj
@@ -21,7 +21,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Commands\Category\" />
       <Folder Include="DomainEventHandlers\" />
+      <Folder Include="Queries\Category\" />
     </ItemGroup>
 
 </Project>
