--- a/src/EventHub.Application/EventHub.Application.csproj
+++ b/src/EventHub.Application/EventHub.Application.csproj
@@ -15,6 +15,7 @@
 
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="13.0.1"/>
+        <PackageReference Include="Dapper" Version="2.1.35" />
         <PackageReference Include="MediatR" Version="12.4.0" />
         <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="7.1.2"/>
         <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.0.1" />
