--- a/src/docker-compose.production.yml
+++ b/src/docker-compose.production.yml
@@ -7,6 +7,10 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
       - ASPNETCORE_URLS=http://+:80
+      - "ConnectionStrings:DefaultConnectionString=Server=eventhub.db,1433;Database=EventHubDB;User Id=sa;Password=@Admin123;TrustServerCertificate=True;Multipleactiveresultsets=true"
+      - "ConnectionStrings:CacheConnectionString=eventhub.cache:6379"
+      - "SeqConfiguration:ServerUrl=http://eventhub.seq:5341"
+      - "HangfireSettings:Storage:ConnectionString=mongodb://admin:admin@eventhub.hangfire:27017/hangfire-webapi?authSource=admin"
     build:
       context: .
       dockerfile: Dockerfile
