--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -62,6 +62,7 @@ services:
       - eventhub.db
       - eventhub.cache
       - eventhub.seq
+      - eventhub.hangfire
     ports:
       - "8002:80"
     build:
