--- a/src/EventHub.Application/EventHub.Application.csproj
+++ b/src/EventHub.Application/EventHub.Application.csproj
@@ -26,6 +26,7 @@
       <Folder Include="Commands\User\ChangePassword\" />
       <Folder Include="Commands\User\CreateUser\" />
       <Folder Include="Commands\User\UpdateUser\" />
+      <Folder Include="Exceptions\" />
     </ItemGroup>
 
     <ItemGroup>
