Add behaviour and refactor again

--- a/src/EventHub.Application/EventHub.Application.csproj
+++ b/src/EventHub.Application/EventHub.Application.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\EventHub.Abstractions\EventHub.Abstractions.csproj"/>
+        <ProjectReference Include="..\EventHub.Persistence\EventHub.Persistence.csproj" />
         <ProjectReference Include="..\EventHub.Shared\EventHub.Shared.csproj" />
         <ProjectReference Include="..\EventHub.Domain\EventHub.Domain.csproj"/>
         <ProjectReference Include="..\EventHub.Shared\EventHub.Shared.csproj" />
