--- a/source/EventHub.Presentation/Dockerfile
+++ b/source/EventHub.Presentation/Dockerfile
@@ -6,14 +6,13 @@ FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["Directory.Build.props", "./"]
-COPY ["source/EventHub.Presentation/EventHub.Presentation.csproj", "source/EventHub.Presentation/"]
-COPY ["source/EventHub.Abstractions/EventHub.Abstractions.csproj", "source/EventHub.Abstractions/"]
-COPY ["source/EventHub.Domain/EventHub.Domain.csproj", "source/EventHub.Domain/"]
-COPY ["source/EventHub.Shared/EventHub.Shared.csproj", "source/EventHub.Shared/"]
-COPY ["source/EventHub.Persistence/EventHub.Persistence.csproj", "source/EventHub.Persistence/"]
 COPY ["source/EventHub.Application/EventHub.Application.csproj", "source/EventHub.Application/"]
+COPY ["source/EventHub.Domain/EventHub.Domain.csproj", "source/EventHub.Domain/"]
+COPY ["source/EventHub.Domain.Shared/EventHub.Domain.Shared.csproj", "source/EventHub.Domain.Shared/"]
 COPY ["source/EventHub.Infrastructure/EventHub.Infrastructure.csproj", "source/EventHub.Infrastructure/"]
-COPY ["source/EventHub.SignalR/EventHub.SignalR.csproj", "source/EventHub.SignalR/"]
+COPY ["source/EventHub.Infrastructure.Persistence/EventHub.Infrastructure.Persistence.csproj", "source/EventHub.Infrastructure.Persistence/"]
+COPY ["source/EventHub.Infrastructure.SignalR/EventHub.Infrastructure.SignalR.csproj", "source/EventHub.Infrastructure.SignalR/"]
+COPY ["source/EventHub.Presentation/EventHub.Presentation.csproj", "source/EventHub.Presentation/"]
 RUN dotnet restore "source/EventHub.Presentation/EventHub.Presentation.csproj"
 COPY . .
 WORKDIR "/src/source/EventHub.Presentation"
