--- a/source/EventHub.Infrastructure/EventHub.Infrastructure.csproj
+++ b/source/EventHub.Infrastructure/EventHub.Infrastructure.csproj
@@ -41,6 +41,7 @@
 		<PackageReference Include="SignalRSwaggerGen" Version="4.7.0" />
 		<PackageReference Include="StackExchange.Redis" Version="2.8.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.2" />
+		<PackageReference Include="Ulid" Version="1.3.4" />
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\EventHub.Infrastructure.Persistence\EventHub.Infrastructure.Persistence.csproj" />
