--- a/source/EventHub.Domain/EventHub.Domain.csproj
+++ b/source/EventHub.Domain/EventHub.Domain.csproj
@@ -5,6 +5,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0"/>
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.7"/>
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0"/>
+        <PackageReference Include="Microsoft.ML" Version="4.0.0" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
         <PackageReference Include="Quartz.AspNetCore" Version="3.13.1" />
     </ItemGroup>
