--- a/source/EventHub.Application/EventHub.Application.csproj
+++ b/source/EventHub.Application/EventHub.Application.csproj
@@ -5,6 +5,7 @@
 		<PackageReference Include="MediatR" Version="12.4.0" />
 		<PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="8.2.1" />
 		<PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.2.1" />
+		<PackageReference Include="Stripe.net" Version="47.3.0" />
 	</ItemGroup>
 	
 	<ItemGroup>
