Fix follow, favourite

--- a/source/EventHub.Application/EventHub.Application.csproj
+++ b/source/EventHub.Application/EventHub.Application.csproj
@@ -11,4 +11,8 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\EventHub.Domain\EventHub.Domain.csproj" />
 	</ItemGroup>
+	
+	<ItemGroup>
+	  <Folder Include="DomainEventHandlers\" />
+	</ItemGroup>
 </Project>
