--- a/source/EventHub.Domain/EventHub.Domain.csproj
+++ b/source/EventHub.Domain/EventHub.Domain.csproj
@@ -1,15 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <ItemGroup>
-        <PackageReference Include="FluentValidation" Version="11.9.2"/>
-        <PackageReference Include="MediatR" Version="12.4.0"/>
-        <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0"/>
-        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.7"/>
-        <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0"/>
+        <PackageReference Include="FluentValidation" Version="11.9.2" />
+        <PackageReference Include="MediatR" Version="12.4.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.7" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
         <PackageReference Include="Microsoft.ML" Version="4.0.0" />
-        <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Quartz.AspNetCore" Version="3.13.1" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\EventHub.Domain.Shared\EventHub.Domain.Shared.csproj" />
+    </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Events\" />
     </ItemGroup>
 </Project>
