--- a/source/EventHub.Presentation/appsettings.json
+++ b/source/EventHub.Presentation/appsettings.json
@@ -55,6 +55,9 @@
       "ConnectionString": ""
     }
   },
+  "StripeSettings": {
+    "SecretKey": ""
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
