--- a/source/EventHub.Presentation/appsettings.json
+++ b/source/EventHub.Presentation/appsettings.json
@@ -55,6 +55,10 @@
       "ConnectionString": ""
     }
   },
+  "ServiceUrls": {
+    "SentimentAnalysis": "",
+    "RecommenderSystem": ""
+  },
   "StripeSettings": {
     "SecretKey": ""
   },
